fixed services spacing

--- a/src/components/ContactHero.css
+++ b/src/components/ContactHero.css
@@ -122,7 +122,7 @@ h6 {
 
 @media only screen
   and (max-width: 480px) {
-     .hero-container {
+     .contact-hero-container {
         text-align: center;
     }
     .contact-image{
@@ -133,7 +133,7 @@ h6 {
 
 @media only screen
   and (max-width: 700px) {
-     .hero-container {
+     .contact-hero-container {
         text-align: center;
     }
     .contact-image{
