--- a/src/components/ServicesPage.css
+++ b/src/components/ServicesPage.css
@@ -17,16 +17,25 @@ img.fluid {
     overflow: hidden;
 }
 
+.services-content-container{
+    padding-top: 3em;
+}
+
 .services-content-container > h1 {
     color: #0F101D;
     font-size: 68px;
-    margin-top: -80px;
     text-align: left;
     width: 80%;
 }
 
-.services-image{
+.services-image-left{
     width: 20em;
+    float: right;
+}
+
+.services-image-right{
+    width: 20em;
+    float: left;
 }
 
 .services-content-container > p {
@@ -43,7 +52,10 @@ img.fluid {
      .services-container {
         text-align: center;
     }
-    .services-image {
+    .services-image-right {
+        display: none;
+    }
+    .services-image-left {
         display: none;
     }
     .dev-image{
@@ -56,7 +68,10 @@ img.fluid {
      .services-container {
         text-align: center;
     }
-    .services-image {
+    .services-image-right {
+        display: none;
+    }
+    .services-image-left {
         display: none;
     }
     .dev-image{
